--- a/.github/workflows/on_pull_request.yaml
+++ b/.github/workflows/on_pull_request.yaml
@@ -16,3 +16,9 @@ jobs:
 
       - name: Run linters
         run: tox -e lint
+
+  tests:
+    name: Run Tests
+    needs:
+      - lint
+    uses: ./.github/workflows/test.yaml
