--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@ envlist = fmt, lint, unit
 [vars]
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
-;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
-all_path = {[vars]src_path} {[vars]tst_path}
+lib_path = {toxinidir}/lib/charms/glauth_utils
+all_path = {[vars]src_path} {[vars]tst_path} {[vars]lib_path}
 
 [testenv]
 setenv =
@@ -38,8 +38,7 @@ deps =
     ruff
     codespell
 commands =
-    # uncomment the following line if this charm owns a lib
-    # codespell {[vars]lib_path}
+    codespell {[vars]lib_path}
     codespell {toxinidir} \
               --skip {toxinidir}/.git \
               --skip {toxinidir}/.tox \
