address the breaking changes in the integration test introduced by the protobuf

--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,7 @@ passenv =
 [testenv:fmt]
 description = Apply coding style standards to code
 deps =
-    black
-    ruff
+    -r{toxinidir}/fmt-requirements.txt
 commands =
     black {[vars]all_path}
     ruff --fix {[vars]all_path}
@@ -34,9 +33,7 @@ commands =
 [testenv:lint]
 description = Check code against coding style standards
 deps =
-    black
-    ruff
-    codespell
+    -r{toxinidir}/lint-requirements.txt
 commands =
     codespell {[vars]lib_path}
     codespell {toxinidir} \
@@ -54,9 +51,7 @@ commands =
 [testenv:unit]
 description = Run unit tests
 deps =
-    pytest
-    coverage[toml]
-    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/unit-requirements.txt
 commands =
     coverage run --source={[vars]src_path} \
                  -m pytest \
@@ -70,10 +65,7 @@ commands =
 [testenv:integration]
 description = Run integration tests
 deps =
-    pytest
-    juju
-    pytest-operator
-    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/integration-requirements.txt
 commands =
     pytest -v \
            -s \
