--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -9,3 +9,12 @@ bases:
     run-on:
     - name: ubuntu
       channel: "22.04"
+parts:
+  charm:
+    build-packages:
+      - python3-dev
+      - libldap2-dev
+      - libsasl2-dev
+      - libssl-dev
+    charm-binary-python-packages:
+      - psycopg[binary]
