--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@
 name = "glauth-utils"
 version = "0.1.0"
 description = "A Charmed Operator for running GLAuth utilities on Kubnernetes"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 readme = "README.md"
 license = {file = "LICENSE"}
 
@@ -25,7 +25,7 @@ log_cli_level = "INFO"
 # Formatting tools configuration
 [tool.black]
 line-length = 99
-target-version = ["py38"]
+target-version = ["py310", "py311"]
 
 # Linting tools configuration
 [tool.ruff]
