--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,10 @@ max-complexity = 10
 
 [tool.ruff.pydocstyle]
 convention = "google"
+
+[tool.mypy]
+pretty = true
+python_version = "3.10"
+explicit_package_bases = true
+ignore_missing_imports = true
+disable_error_code = "attr-defined"
