--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,15 @@ passenv =
   CHARM_BUILD_DIR
   MODEL_SETTINGS
 
+[testenv:dev]
+description = Prepare local development tools
+deps =
+    pre-commit
+    mypy
+commands =
+    pre-commit install
+    pre-commit autoupdate
+
 [testenv:fmt]
 description = Apply coding style standards to code
 deps =
