--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,7 +16,7 @@ jobs:
         run: python -m pip install tox
 
       - name: Run tests
-        run: tox -e unit
+        run: tox -e build-prerequisites,unit
 
   integration-test-microk8s:
     name: Integration tests (microk8s)
@@ -36,7 +36,7 @@ jobs:
           bootstrap-options: '--agent-version=3.2.0'
 
       - name: Run integration tests
-        run: tox -e integration -- --model testing
+        run: tox -e build-prerequisites,integration -- --model testing
 
       - name: Get contexts
         run: kubectl config view
