--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 [tox]
 skipsdist=True
 skip_missing_interpreters = True
-envlist = fmt, lint, unit
+envlist = fmt, lint, pre-built, unit
 
 [vars]
 src_path = {toxinidir}/src/
@@ -57,8 +57,21 @@ commands =
     ruff {[vars]all_path}
     black --check --diff {[vars]all_path}
 
+[testenv:build-prerequisites]
+description = Install necessary Linux packages for python dependencies
+allowlist_externals =
+    sudo
+    apt-get
+commands =
+    sudo apt-get update
+    sudo apt-get install -y python3-dev \
+                            libldap2-dev \
+                            libsasl2-dev
+
 [testenv:unit]
 description = Run unit tests
+depends =
+    build-prerequisites
 deps =
     -r{toxinidir}/unit-requirements.txt
 commands =
@@ -73,6 +86,8 @@ commands =
 
 [testenv:integration]
 description = Run integration tests
+depends =
+    build-prerequisites
 deps =
     -r{toxinidir}/integration-requirements.txt
 commands =
