chore: add render database schema diagram

--- a/tox.ini
+++ b/tox.ini
@@ -97,3 +97,12 @@ commands =
            --ignore={[vars]tst_path}unit \
            --log-cli-level=INFO \
            {posargs}
+
+[testenv:render-database-diagram]
+description = Render a diagram for the database schema
+deps =
+    sqlalchemy-data-model-visualizer
+allowlist_externals =
+    {toxinidir}/render_database_schema.py
+commands =
+    {toxinidir}/render_database_schema.py
