--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ description = Prepare local development tools
 deps =
     pre-commit
     mypy
+    types-PyYAML
 commands =
     pre-commit install
     pre-commit autoupdate
