ci: add necessary GitHub workflows

--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -10,3 +10,10 @@ jobs:
   tests:
     name: Run Tests
     uses: ./.github/workflows/test.yaml
+
+  publish-charm:
+    name: Publish Charm
+    needs: tests
+    uses: ./.github/workflows/publish.yaml
+    secrets:
+      CHARMCRAFT_CREDENTIALS: ${{ secrets.CHARMCRAFT_CREDENTIALS }}
