--- a/metadata.yaml
+++ b/metadata.yaml
@@ -5,7 +5,7 @@ name: glauth-utils
 
 display-name: GLAuth Utils
 
-docs: https//discourse.charmhub.io/t/13948
+docs: https://discourse.charmhub.io/t/13948
 
 summary: |
   GLAuth Utility Charmed Operator for Kubernetes
