--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -46,6 +46,10 @@ jobs:
         run: juju status --relations
         if: failure()
 
-      - name: Get juju logs
-        run: juju debug-log --replay --include unit-glauth-utils-0
+      - name: Get juju glauth-utils logs
+        run: juju debug-log --replay --include glauth-utils
+        if: failure()
+
+      - name: Get glauth juju logs
+        run: juju debug-log --replay --include glauth-k8s
         if: failure()
