--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ deps =
     mypy
     types-PyYAML
 commands =
-    pre-commit install
+    pre-commit install -t commit-msg
 
 [testenv:fmt]
 description = Apply coding style standards to code
