--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,8 +32,8 @@ jobs:
         with:
           provider: microk8s
           channel: 1.28-strict/stable
-          juju-channel: 3.2
-          bootstrap-options: '--agent-version=3.2.0'
+          juju-channel: 3.4/stable
+          bootstrap-options: '--agent-version=3.4.2'
 
       - name: Run integration tests
         run: tox -e build-prerequisites,integration -- --model testing
