--- a/tox.ini
+++ b/tox.ini
@@ -36,8 +36,8 @@ description = Apply coding style standards to code
 deps =
     -r{toxinidir}/fmt-requirements.txt
 commands =
-    black {[vars]all_path}
-    ruff --fix {[vars]all_path}
+    isort {[vars]all_path}
+    ruff format {[vars]all_path}
 
 [testenv:lint]
 description = Check code against coding style standards
@@ -54,8 +54,8 @@ commands =
               --skip {toxinidir}/.mypy_cache \
               --skip {toxinidir}/icon.svg
 
-    ruff {[vars]all_path}
-    black --check --diff {[vars]all_path}
+    isort --check-only --diff {[vars]all_path}
+    ruff check --show-fixes {[vars]all_path}
 
 [testenv:build-prerequisites]
 description = Install necessary Linux packages for python dependencies
