--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -27,13 +27,9 @@ actions:
         type: string
     required: ["path"]
 
-bases:
-  - build-on:
-    - name: ubuntu
-      channel: "22.04"
-    run-on:
-    - name: ubuntu
-      channel: "22.04"
+base: ubuntu@22.04
+platforms:
+  amd64:
 
 parts:
   charm:
