--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@
 name = "glauth-utils"
 version = "0.1.0"
 description = "A Charmed Operator for running GLAuth utilities on Kubnernetes"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 readme = "README.md"
 license = {file = "LICENSE"}
 
@@ -38,6 +38,7 @@ profile = "black"
 line-length = 99
 include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "lib/charms/glauth_utils/**/*.py"]
 extend-exclude = ["__pycache__", "*.egg_info"]
+target-version = "py312"
 preview = true
 
 [tool.ruff.lint]
