--- a/.github/workflows/on_pull_request.yaml
+++ b/.github/workflows/on_pull_request.yaml
@@ -2,24 +2,13 @@ name: On Pull Request
 
 on:
   pull_request:
+    paths-ignore:
+      - "terraform/**"
 
 jobs:
-  check-changes:
-    name: Check Source File Changes
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dorny/paths-filter@v3
-        id: filter
-        with:
-          filters: |
-            only_terraform:
-              - 'terraform/**/*.tf'
-
   lint:
     name: Lint
-    needs: check-changes
-    if: ${{ github.event_name == 'pull_request' && needs.check-changes.outputs.only_terraform == 'false' }}
+    if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout
@@ -34,7 +23,5 @@ jobs:
   tests:
     name: Run Tests
     needs:
-      - check-changes
       - lint
-    if: ${{ needs.check-changes.outputs.only_terraform == 'false' }}
     uses: ./.github/workflows/tests.yaml
