--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -27,9 +27,8 @@ actions:
         type: string
     required: ["path"]
 
-base: ubuntu@22.04
 platforms:
-  amd64:
+  ubuntu@22.04:amd64:
 
 parts:
   charm:
