tests: use ccc build

--- a/tox.ini
+++ b/tox.ini
@@ -86,6 +86,8 @@ commands =
 
 [testenv:integration]
 description = Run integration tests
+pass_env =
+    CHARM_PATH
 depends =
     build-prerequisites
 deps =
