ci: TIOBE analysis

--- a/tox.ini
+++ b/tox.ini
@@ -82,7 +82,8 @@ commands =
                  -v \
                  -s \
                  {posargs}
-    coverage report
+    coverage report --data-file={toxinidir}/.coverage/.coverage
+    coverage xml --data-file={toxinidir}/.coverage/.coverage
 
 [testenv:integration]
 description = Run integration tests
