--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,13 @@ dynamic = ["version"]
 # Testing tools configuration
 [tool.coverage.run]
 branch = true
+data_file = ".coverage/.coverage"
 
 [tool.coverage.report]
 show_missing = true
+
+[tool.coverage.xml]
+output = ".coverage/coverage.xml"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
