--- a/.github/workflows/promote.yaml
+++ b/.github/workflows/promote.yaml
@@ -3,24 +3,27 @@ name: Promote Charm
 on:
   workflow_dispatch:
     inputs:
-      destination-channel:
-        description: 'Destination Channel'
-        required: true
       origin-channel:
         description: 'Origin Channel'
+        type: string
         required: true
-      base-channel:
-        description: 'Charmcraft Base Channel'
+      destination-channel:
+        description: 'Destination Channel'
+        type: string
+        required: true
+      charmcraft-channel:
+        description: 'Snap channel to use when installing charmcraft'
         required: false
+        type: string
+        default: 'latest/edge'
 
 jobs:
   promote-charm:
       name: Promote charm
       uses: canonical/identity-team/.github/workflows/charm-promotion.yaml@6980fa34b31ca8631e6cb2d57980e7e035697a31 # v1.8.5
       with:
-        base-channel: ${{ github.event.inputs.base-channel }}
-        destination-channel: ${{ github.event.inputs.destination-channel }}
         origin-channel: ${{ github.event.inputs.origin-channel }}
+        destination-channel: ${{ github.event.inputs.destination-channel }}
+        charmcraft-channel: ${{ github.event.inputs.charmcraft-channel }}
       secrets:
         CHARMCRAFT_CREDENTIALS: ${{ secrets.CHARMCRAFT_CREDENTIALS }}
-        PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
