--- a/tox.ini
+++ b/tox.ini
@@ -22,12 +22,16 @@ passenv =
   CHARM_BUILD_DIR
   MODEL_SETTINGS
 
-[testenv:dev]
+[testenv:py]
 description = Prepare local development tools
 deps =
     pre-commit
     mypy
     types-PyYAML
+    -r{toxinidir}/lint-requirements.txt
+    -r{toxinidir}/fmt-requirements.txt
+    -r{toxinidir}/unit-requirements.txt
+    -r{toxinidir}/integration-requirements.txt
 commands =
     pre-commit install
 
